<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="6dp"
    android:elevation="12dp"
    android:layout_width="match_parent"
    android:layout_margin="8dp"
    android:padding="16dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rl_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:fontFamily="serif-monospace"
                android:gravity="center"
                android:textColor="@android:color/darker_gray"
                android:paddingHorizontal="4dp"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:gravity="center"
                android:layout_marginBottom="2dp"
                android:paddingHorizontal="4dp"
                android:layout_below="@+id/name"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@android:color/darker_gray"
                android:gravity="center"
                android:layout_below="@+id/tv_user_name"
                android:fontFamily="serif-monospace"
                android:paddingHorizontal="4dp"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abcgmail"
                android:gravity="center"
                android:layout_below="@+id/email"
                android:paddingHorizontal="4dp"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:fontFamily="serif-monospace"
                android:gravity="center"
                android:paddingHorizontal="4dp"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_active_inactive"
                android:gravity="center"
                android:layout_below="@+id/status"
                android:paddingHorizontal="4dp"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:fontFamily="serif-monospace"
                android:gravity="center"
                android:paddingHorizontal="4dp"
                android:textColor="@android:color/darker_gray"
                android:layout_alignParentEnd="true"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/tv_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gende_m_f"
                android:gravity="center"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/gender"
                android:paddingHorizontal="4dp"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </RelativeLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>